# youtube-history-tool

./: .gitignore  README.md  config.py  main.py  pyproject.toml
src/youtube_history_tool/: __init__.py  auth.py  config.py  history.py  main.py  takeout.py
